[gd_scene load_steps=39 format=3 uid="uid://djle1rk8d0vjj"]

[ext_resource type="AudioStream" uid="uid://wrp5brxr4781" path="res://kenney_impact-sounds/Audio/footstep_concrete_003.ogg" id="1_kgj3g"]
[ext_resource type="AudioStream" uid="uid://dg37b8od1nixa" path="res://kenney_impact-sounds/Audio/footstep_concrete_000.ogg" id="2_6np3w"]
[ext_resource type="AudioStream" uid="uid://b5y15ip8ehhry" path="res://kenney_impact-sounds/Audio/footstep_concrete_002.ogg" id="3_f70bl"]
[ext_resource type="AudioStream" uid="uid://bfwxs6d2wce8q" path="res://memoryGot.mp3" id="4_syqe5"]
[ext_resource type="AudioStream" uid="uid://b1b81vl44k0od" path="res://memoryInserted.mp3" id="5_ddjqm"]
[ext_resource type="AudioStream" uid="uid://6tg0m1k7itby" path="res://stonedooropen.mp3" id="6_tuulc"]
[ext_resource type="Script" path="res://infiniteParallaxBG.gd" id="7_us2ty"]
[ext_resource type="Texture2D" uid="uid://d1085ukcb1a0j" path="res://mountains.png" id="8_emieh"]
[ext_resource type="Texture2D" uid="uid://b0tyi8mjp127n" path="res://clouds.png" id="9_dftss"]
[ext_resource type="Script" path="res://cloudMovement.gd" id="10_aijnm"]
[ext_resource type="Texture2D" uid="uid://spck7r584vtl" path="res://eye.png" id="11_gm8c1"]
[ext_resource type="Texture2D" uid="uid://c0k3nohw3bivf" path="res://sky.png" id="12_18wru"]
[ext_resource type="Texture2D" uid="uid://bdetu21ao1mgv" path="res://ground.png" id="13_7f13r"]
[ext_resource type="Texture2D" uid="uid://uukyyva3uosc" path="res://door_closed.png" id="14_lboca"]
[ext_resource type="Texture2D" uid="uid://cf6x0s8l0jwrh" path="res://door_open.png" id="15_4l2cw"]
[ext_resource type="Texture2D" uid="uid://qsrkk3nsg2p7" path="res://door_open1.png" id="16_okums"]
[ext_resource type="Texture2D" uid="uid://icfehe0fufxk" path="res://door_open2.png" id="17_pxmo8"]
[ext_resource type="Texture2D" uid="uid://dqep70s3ql5i8" path="res://door_open3.png" id="18_nedwd"]
[ext_resource type="Texture2D" uid="uid://dnjgouko2ill2" path="res://door_open4.png" id="19_ebf0h"]
[ext_resource type="Texture2D" uid="uid://bxxxhy2a0onf5" path="res://door_open5.png" id="20_1ebs3"]
[ext_resource type="Texture2D" uid="uid://d06idgw6ch74u" path="res://door_open6.png" id="21_cxhkr"]
[ext_resource type="Texture2D" uid="uid://cew01f4i8ittn" path="res://door_open7.png" id="22_x63q1"]
[ext_resource type="Texture2D" uid="uid://tqqg4qcaj0rb" path="res://door_open8.png" id="23_tp5wp"]
[ext_resource type="Texture2D" uid="uid://b13wyj5npf7y2" path="res://door_open9.png" id="24_ol8a1"]
[ext_resource type="Script" path="res://charHubMovement.gd" id="25_tk2bq"]
[ext_resource type="Texture2D" uid="uid://cub6fe7kofwer" path="res://char/left.png" id="26_7603s"]
[ext_resource type="Texture2D" uid="uid://dapnc6qlptd3d" path="res://char/right.png" id="27_3n7a5"]
[ext_resource type="Script" path="res://cameraMovement.gd" id="28_vjsik"]
[ext_resource type="FontFile" uid="uid://bew7atjv8kh5w" path="res://Pixelify_Sans/PixelifySans-VariableFont_wght.ttf" id="29_m53me"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_adlvo"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_50k3a"]
texture = ExtResource("13_7f13r")
texture_region_size = Vector2i(50, 25)
0:0/size_in_atlas = Vector2i(5, 10)
0:0/0 = 0
5:0/size_in_atlas = Vector2i(5, 10)
5:0/0 = 0
0:10/size_in_atlas = Vector2i(5, 10)
0:10/0 = 0
5:10/size_in_atlas = Vector2i(5, 10)
5:10/0 = 0

[sub_resource type="TileSet" id="TileSet_vh4px"]
sources/1 = SubResource("TileSetAtlasSource_50k3a")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6nmor"]
size = Vector2(2399, 240)

[sub_resource type="SpriteFrames" id="SpriteFrames_sk5ck"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("14_lboca")
}],
"loop": true,
"name": &"closed",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("15_4l2cw")
}],
"loop": true,
"name": &"open",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("16_okums")
}, {
"duration": 1.0,
"texture": ExtResource("17_pxmo8")
}, {
"duration": 1.0,
"texture": ExtResource("18_nedwd")
}, {
"duration": 1.0,
"texture": ExtResource("19_ebf0h")
}, {
"duration": 1.0,
"texture": ExtResource("20_1ebs3")
}, {
"duration": 1.0,
"texture": ExtResource("21_cxhkr")
}, {
"duration": 1.0,
"texture": ExtResource("22_x63q1")
}, {
"duration": 1.0,
"texture": ExtResource("23_tp5wp")
}, {
"duration": 1.0,
"texture": ExtResource("24_ol8a1")
}, {
"duration": 1.0,
"texture": ExtResource("15_4l2cw")
}],
"loop": true,
"name": &"opening",
"speed": 16.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rgbp2"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0pkuy"]
size = Vector2(92, 200)

[sub_resource type="SpriteFrames" id="SpriteFrames_axogv"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("26_7603s")
}],
"loop": true,
"name": &"leftIdle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("26_7603s")
}],
"loop": true,
"name": &"leftJump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("26_7603s")
}],
"loop": true,
"name": &"leftMov",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("27_3n7a5")
}],
"loop": true,
"name": &"rightIdle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("27_3n7a5")
}],
"loop": true,
"name": &"rightJump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("27_3n7a5")
}],
"loop": true,
"name": &"rightMov",
"speed": 5.0
}]

[sub_resource type="Theme" id="Theme_d7qll"]
default_font = ExtResource("29_m53me")
default_font_size = 25

[node name="Node2D" type="Node2D"]

[node name="audio" type="Node" parent="."]

[node name="jump" type="AudioStreamPlayer2D" parent="audio"]
position = Vector2(580, 325)
stream = ExtResource("1_kgj3g")

[node name="land" type="AudioStreamPlayer2D" parent="audio"]
stream = ExtResource("2_6np3w")

[node name="footstep" type="AudioStreamPlayer2D" parent="audio"]
stream = ExtResource("3_f70bl")

[node name="get" type="AudioStreamPlayer2D" parent="audio"]
stream = ExtResource("4_syqe5")

[node name="insert" type="AudioStreamPlayer2D" parent="audio"]
stream = ExtResource("5_ddjqm")

[node name="doorOpen" type="AudioStreamPlayer2D" parent="audio"]
stream = ExtResource("6_tuulc")

[node name="deathStatic" type="StaticBody2D" parent="."]
position = Vector2(0, 850)
scale = Vector2(1000, 12)

[node name="deathCollision" type="CollisionShape2D" parent="deathStatic"]
shape = SubResource("RectangleShape2D_adlvo")

[node name="bg" type="ParallaxBackground" parent="."]
offset = Vector2(575, 200)
scale = Vector2(1.5, 1.5)
transform = Transform2D(1.5, 0, 0, 1.5, 575, 200)
script = ExtResource("7_us2ty")

[node name="mountains" type="ParallaxLayer" parent="bg"]
z_index = 3
y_sort_enabled = true
texture_repeat = 2
scale = Vector2(0.125, 0.125)
motion_scale = Vector2(1, 0.5)

[node name="mountainsSprite" type="Sprite2D" parent="bg/mountains"]
z_index = 3
texture_repeat = 3
scale = Vector2(1.25, 1.25)
texture = ExtResource("8_emieh")

[node name="mountainsSprite2" type="Sprite2D" parent="bg/mountains"]
z_index = 3
texture_repeat = 3
position = Vector2(-12500, 0)
scale = Vector2(1.25, 1.25)
texture = ExtResource("8_emieh")

[node name="mountainsSprite3" type="Sprite2D" parent="bg/mountains"]
z_index = 3
texture_repeat = 3
position = Vector2(12500, 0)
scale = Vector2(1.25, 1.25)
texture = ExtResource("8_emieh")

[node name="mountainsSprite4" type="Sprite2D" parent="bg/mountains"]
z_index = 3
texture_repeat = 3
position = Vector2(0, 6250)
rotation = 3.14159
scale = Vector2(1.25, 1.25)
texture = ExtResource("8_emieh")

[node name="mountainsSprite5" type="Sprite2D" parent="bg/mountains"]
z_index = 3
texture_repeat = 3
position = Vector2(-12500, 6250)
rotation = 3.14159
scale = Vector2(1.25, 1.25)
texture = ExtResource("8_emieh")

[node name="mountainsSprite6" type="Sprite2D" parent="bg/mountains"]
z_index = 3
texture_repeat = 3
position = Vector2(12500, 6250)
rotation = 3.14159
scale = Vector2(1.25, 1.25)
texture = ExtResource("8_emieh")

[node name="clouds" type="ParallaxLayer" parent="bg"]
z_index = 2
y_sort_enabled = true
scale = Vector2(0.125, 0.125)
motion_scale = Vector2(1.5, 0.25)

[node name="cloudsSprite" type="Sprite2D" parent="bg/clouds"]
visibility_layer = 128
z_index = 2
texture_repeat = 2
scale = Vector2(1.25, 1.25)
texture = ExtResource("9_dftss")
script = ExtResource("10_aijnm")

[node name="cloudsSprite2" type="Sprite2D" parent="bg/clouds"]
visibility_layer = 128
z_index = 2
texture_repeat = 2
position = Vector2(-12500, 0)
scale = Vector2(1.25, 1.25)
texture = ExtResource("9_dftss")
script = ExtResource("10_aijnm")

[node name="cloudsSprite3" type="Sprite2D" parent="bg/clouds"]
visibility_layer = 128
z_index = 2
texture_repeat = 2
position = Vector2(12500, 0)
scale = Vector2(1.25, 1.25)
texture = ExtResource("9_dftss")
script = ExtResource("10_aijnm")

[node name="cloudsSprite7" type="Sprite2D" parent="bg/clouds"]
visibility_layer = 128
z_index = 2
texture_repeat = 2
position = Vector2(-25000, 0)
scale = Vector2(1.25, 1.25)
texture = ExtResource("9_dftss")
script = ExtResource("10_aijnm")

[node name="cloudsSprite8" type="Sprite2D" parent="bg/clouds"]
visibility_layer = 128
z_index = 2
texture_repeat = 2
position = Vector2(25000, 0)
scale = Vector2(1.25, 1.25)
texture = ExtResource("9_dftss")
script = ExtResource("10_aijnm")

[node name="cloudsSprite9" type="Sprite2D" parent="bg/clouds"]
visibility_layer = 128
z_index = 2
texture_repeat = 2
position = Vector2(-25000, -6000)
scale = Vector2(1.25, 1.25)
texture = ExtResource("9_dftss")
script = ExtResource("10_aijnm")

[node name="cloudsSprite10" type="Sprite2D" parent="bg/clouds"]
visibility_layer = 128
z_index = 2
texture_repeat = 2
position = Vector2(25000, -6000)
scale = Vector2(1.25, 1.25)
texture = ExtResource("9_dftss")
script = ExtResource("10_aijnm")

[node name="cloudsSprite4" type="Sprite2D" parent="bg/clouds"]
visibility_layer = 128
z_index = 2
texture_repeat = 2
position = Vector2(0, -6000)
scale = Vector2(1.25, 1.25)
texture = ExtResource("9_dftss")
script = ExtResource("10_aijnm")

[node name="cloudsSprite5" type="Sprite2D" parent="bg/clouds"]
visibility_layer = 128
z_index = 2
texture_repeat = 2
position = Vector2(-12500, -6000)
scale = Vector2(1.25, 1.25)
texture = ExtResource("9_dftss")
script = ExtResource("10_aijnm")

[node name="cloudsSprite6" type="Sprite2D" parent="bg/clouds"]
visibility_layer = 128
z_index = 2
texture_repeat = 2
position = Vector2(12500, -6000)
scale = Vector2(1.25, 1.25)
texture = ExtResource("9_dftss")
script = ExtResource("10_aijnm")

[node name="moon" type="ParallaxLayer" parent="bg"]
z_index = 1
y_sort_enabled = true
scale = Vector2(0.125, 0.125)
motion_scale = Vector2(0.25, 0)

[node name="moonSprite" type="Sprite2D" parent="bg/moon"]
visibility_layer = 256
z_index = 1
texture = ExtResource("11_gm8c1")

[node name="sky" type="ParallaxLayer" parent="bg"]
y_sort_enabled = true
motion_scale = Vector2(4, 4)
motion_offset = Vector2(1, 0)

[node name="skySprite" type="Sprite2D" parent="bg/sky"]
visibility_layer = 512
scale = Vector2(5, 1.25)
texture = ExtResource("12_18wru")

[node name="ground" type="TileMap" parent="."]
position = Vector2(600, 550)
tile_set = SubResource("TileSet_vh4px")
rendering_quadrant_size = 25
format = 2
layer_0/name = "ground"
layer_0/z_index = 1
layer_0/tile_data = PackedInt32Array(196565, 1, 0, 196580, 1, 0, 196595, 1, 0, 131074, 1, 0, 131089, 1, 0, 131104, 1, 0, 131119, 1, 0, 196550, 1, 0, 1179590, 327681, 0, 1179605, 327681, 0, 1179620, 327681, 0, 1179635, 327681, 0, 1114114, 327681, 0, 1114129, 327681, 0, 1114144, 327681, 0, 1114159, 327681, 0, 131134, 1, 0, 131149, 1, 0, 1114174, 327681, 0, 1114189, 327681, 0)

[node name="tileStatic" type="StaticBody2D" parent="ground"]

[node name="tileCollision" type="CollisionShape2D" parent="ground/tileStatic"]
position = Vector2(157.5, 39)
shape = SubResource("RectangleShape2D_6nmor")

[node name="tutDoor" type="Area2D" parent="."]
position = Vector2(-300, 365)

[node name="doorSprite" type="AnimatedSprite2D" parent="tutDoor"]
position = Vector2(1, -151)
sprite_frames = SubResource("SpriteFrames_sk5ck")
animation = &"open"

[node name="doorCollision" type="CollisionShape2D" parent="tutDoor"]
shape = SubResource("RectangleShape2D_rgbp2")

[node name="door1" type="Area2D" parent="."]
position = Vector2(50, 365)

[node name="doorSprite" type="AnimatedSprite2D" parent="door1"]
position = Vector2(1, -151)
sprite_frames = SubResource("SpriteFrames_sk5ck")
animation = &"open"

[node name="doorCollision" type="CollisionShape2D" parent="door1"]
shape = SubResource("RectangleShape2D_rgbp2")

[node name="door2" type="Area2D" parent="."]
position = Vector2(400, 365)

[node name="doorSprite" type="AnimatedSprite2D" parent="door2"]
position = Vector2(1, -151)
sprite_frames = SubResource("SpriteFrames_sk5ck")
animation = &"closed"

[node name="doorCollision" type="CollisionShape2D" parent="door2"]
shape = SubResource("RectangleShape2D_rgbp2")

[node name="door3" type="Area2D" parent="."]
position = Vector2(750, 365)

[node name="doorSprite" type="AnimatedSprite2D" parent="door3"]
position = Vector2(1, -151)
sprite_frames = SubResource("SpriteFrames_sk5ck")
animation = &"closed"

[node name="doorCollision" type="CollisionShape2D" parent="door3"]
shape = SubResource("RectangleShape2D_rgbp2")

[node name="door4" type="Area2D" parent="."]
position = Vector2(1100, 365)

[node name="doorSprite" type="AnimatedSprite2D" parent="door4"]
position = Vector2(1, -151)
sprite_frames = SubResource("SpriteFrames_sk5ck")
animation = &"closed"

[node name="doorCollision" type="CollisionShape2D" parent="door4"]
shape = SubResource("RectangleShape2D_rgbp2")

[node name="door5" type="Area2D" parent="."]
position = Vector2(1450, 365)

[node name="doorSprite" type="AnimatedSprite2D" parent="door5"]
position = Vector2(1, -151)
sprite_frames = SubResource("SpriteFrames_sk5ck")
animation = &"closed"

[node name="doorCollision" type="CollisionShape2D" parent="door5"]
shape = SubResource("RectangleShape2D_rgbp2")

[node name="door6" type="Area2D" parent="."]
position = Vector2(1800, 365)

[node name="doorSprite" type="AnimatedSprite2D" parent="door6"]
position = Vector2(1, -151)
sprite_frames = SubResource("SpriteFrames_sk5ck")
animation = &"closed"

[node name="doorCollision" type="CollisionShape2D" parent="door6"]
shape = SubResource("RectangleShape2D_rgbp2")

[node name="player" type="CharacterBody2D" parent="."]
position = Vector2(-300, 325)
script = ExtResource("25_tk2bq")

[node name="playerCollision" type="CollisionShape2D" parent="player"]
position = Vector2(9, 23)
shape = SubResource("RectangleShape2D_0pkuy")

[node name="playerSprite" type="AnimatedSprite2D" parent="player"]
sprite_frames = SubResource("SpriteFrames_axogv")
animation = &"leftJump"

[node name="camera" type="Camera2D" parent="."]
position = Vector2(580, 325)
script = ExtResource("28_vjsik")

[node name="tooltip" type="Label" parent="camera"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -108.5
offset_top = -300.0
offset_right = 108.5
offset_bottom = -270.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_d7qll")
metadata/_edit_use_anchors_ = true

[connection signal="body_entered" from="tutDoor" to="player" method="_on_tut_door_body_entered"]
[connection signal="body_exited" from="tutDoor" to="player" method="_on_tut_door_body_exited"]
[connection signal="body_entered" from="door1" to="player" method="_on_door_1_body_entered"]
[connection signal="body_exited" from="door1" to="player" method="_on_door_1_body_exited"]
[connection signal="body_entered" from="door2" to="player" method="_on_door_2_body_entered"]
[connection signal="body_exited" from="door2" to="player" method="_on_door_2_body_exited"]
[connection signal="body_entered" from="door3" to="player" method="_on_door_3_body_entered"]
[connection signal="body_exited" from="door3" to="player" method="_on_door_3_body_exited"]
[connection signal="body_entered" from="door4" to="player" method="_on_door_4_body_entered"]
[connection signal="body_exited" from="door4" to="player" method="_on_door_4_body_exited"]
[connection signal="body_entered" from="door5" to="player" method="_on_door_5_body_entered"]
[connection signal="body_exited" from="door5" to="player" method="_on_door_5_body_exited"]
[connection signal="body_entered" from="door6" to="player" method="_on_door_6_body_entered"]
[connection signal="body_exited" from="door6" to="player" method="_on_door_6_body_exited"]
